crates/strider/tests/snapshots/aarch64__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x874:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" -> "5" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "14" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "14" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v18" [color="#888888", style=dashed];
  "v18" -> "14" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "15" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v22" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v22" [color="#888888", style=dashed];
  "v22" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "29" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "34" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x874:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "34" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "34" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "34" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" -> "34" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "38" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "34" -> "38" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "34" -> "v40" [color="#888888", style=dashed];
  "v40" -> "38" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "34" -> "v41" [color="#888888", style=dashed];
  "v41" -> "38" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "34" -> "v42" [color="#888888", style=dashed];
  "v42" -> "38" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "39" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v46" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "34" -> "v46" [color="#888888", style=dashed];
  "v46" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
